Correct link to page on backsode of wallet-card Fix scroll-behavior on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -12,6 +12,7 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	background-attachment: fixed;
 }
 
 a {
